# telegram-mcq-solver-bot

./: .replit  README.md  main.py  pyproject.toml  requirements.txt  user_logs.txt
attached_assets/: Pasted--workspace-git-init-Reinitialized-existing-Git-repository-in-home-runner-workspace-git-work-1752004823595_1752004823598.txt
bot/: bot.py
